# GitHubBurrito

./: README.md  pyproject.toml
src/githubburrito/: client.py  errors.py  types.py
